ARROW-16116: [C++] Handle non-nullable fields when reading Parquet